# whoop-connecter

./: .env.example  .gitignore  README.md  health_wearables_tz.md  pyproject.toml
cli/: main.py
deploy/: openclaw_mcp_config.json  setup_vps.sh
mcp_server/: server.py
mcp_server/tools/: auth_status.py  body.py  cycles.py  profile.py  recovery.py  sleep.py  summary.py  trends.py  workouts.py
tests/: conftest.py
tests/integration/: test_acceptance.py  test_client.py  test_mcp_tools.py  test_services.py
tests/unit/: test_analytics.py  test_cache.py  test_mappers.py  test_token_store.py
whoop/: services.py
whoop/analytics/: __init__.py  daily_summary.py  trends.py
whoop/api/: __init__.py  cache.py  client.py  endpoints.py
whoop/auth/: __init__.py  oauth.py  token_store.py
whoop/schema/: __init__.py  mappers.py  unified.py
